管理员登录注册 权限管理

--- a/pom.xml
+++ b/pom.xml
@@ -490,7 +490,7 @@
   <profile>
       <id>test</id>
       <properties>
-        <jdbc.url.ip>wisewin-tech.com:3306/yixingwang</jdbc.url.ip>
+        <jdbc.url.ip>wisewin-tech.com:3306/hotel</jdbc.url.ip>
         <jdbc.username>root</jdbc.username>
         <jdbc.password>Sunshibo1</jdbc.password>
 
