--- a/pom.xml
+++ b/pom.xml
@@ -95,38 +95,55 @@
 
     <!-- POI -->
 
-    <dependency>
+    <!--<dependency>-->
 
-      <groupId>org.apache.poi</groupId>
+      <!--<groupId>org.apache.poi</groupId>-->
 
-      <artifactId>poi</artifactId>
+      <!--<artifactId>poi</artifactId>-->
 
-      <version>3.9</version>
+      <!--<version>3.15</version>-->
 
-      <exclusions>
+      <!--<exclusions>-->
 
-        <exclusion>
+        <!--<exclusion>-->
 
-          <artifactId>commons-codec</artifactId>
+          <!--<artifactId>commons-codec</artifactId>-->
 
-          <groupId>commons-codec</groupId>
+          <!--<groupId>commons-codec</groupId>-->
 
-        </exclusion>
+        <!--</exclusion>-->
 
-      </exclusions>
+      <!--</exclusions>-->
 
-    </dependency>
-    <!--poi-->
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi</artifactId>
-      <version>3.15</version>
-    </dependency>
+    <!--</dependency>-->
+    <!--&lt;!&ndash;poi&ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.poi</groupId>-->
+      <!--<artifactId>poi</artifactId>-->
+      <!--<version>3.15</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.poi</groupId>-->
+      <!--<artifactId>poi-ooxml</artifactId>-->
+      <!--<version>3.15</version>-->
+    <!--</dependency>-->
+
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>3.15</version>
+      <version>3.17</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml-schemas</artifactId>
+      <version>3.17</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.17</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.springframework</groupId>
@@ -410,11 +427,11 @@
       <artifactId>gson</artifactId>
       <version>2.3.1</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml</artifactId>
-      <version>3.9</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.poi</groupId>-->
+      <!--<artifactId>poi-ooxml</artifactId>-->
+      <!--<version>3.9</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
