--- a/pom.xml
+++ b/pom.xml
@@ -427,11 +427,11 @@
       <artifactId>gson</artifactId>
       <version>2.3.1</version>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.apache.poi</groupId>-->
-      <!--<artifactId>poi-ooxml</artifactId>-->
-      <!--<version>3.9</version>-->
-    <!--</dependency>-->
+    <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.9</version>
+  </dependency>
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
