--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.3.0</version>
+    </dependency>
     <!-- Jackson 2 -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
