--- a/pom.xml
+++ b/pom.xml
@@ -100,54 +100,19 @@
 
     <!-- POI -->
 
-    <!--<dependency>-->
 
-      <!--<groupId>org.apache.poi</groupId>-->
-
-      <!--<artifactId>poi</artifactId>-->
-
-      <!--<version>3.15</version>-->
-
-      <!--<exclusions>-->
-
-        <!--<exclusion>-->
-
-          <!--<artifactId>commons-codec</artifactId>-->
-
-          <!--<groupId>commons-codec</groupId>-->
-
-        <!--</exclusion>-->
-
-      <!--</exclusions>-->
-
-    <!--</dependency>-->
-    <!--&lt;!&ndash;poi&ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.poi</groupId>-->
-      <!--<artifactId>poi</artifactId>-->
-      <!--<version>3.15</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.poi</groupId>-->
-      <!--<artifactId>poi-ooxml</artifactId>-->
-      <!--<version>3.15</version>-->
-    <!--</dependency>-->
-
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml</artifactId>
-      <version>3.17</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml-schemas</artifactId>
-      <version>3.17</version>
-    </dependency>
+    <!--poi-->
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
-      <version>3.17</version>
+      <version>3.15</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.15</version>
+    </dependency>
+
 
 
     <dependency>
@@ -432,11 +397,7 @@
       <artifactId>gson</artifactId>
       <version>2.3.1</version>
     </dependency>
-    <dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi-ooxml</artifactId>
-    <version>3.9</version>
-  </dependency>
+
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
