--- a/pom.xml
+++ b/pom.xml
@@ -497,7 +497,7 @@
     <profile>
       <id>test</id>
       <properties>
-        <jdbc.url.ip>localhost:3306/hotel</jdbc.url.ip>
+        <jdbc.url.ip>zccxywy.cn:3306/hotel</jdbc.url.ip>
         <jdbc.username>root</jdbc.username>
         <jdbc.password>root</jdbc.password>
         <system.cfg.imageBaeUrl>http://39.107.224.185:8080/</system.cfg.imageBaeUrl>
