--- a/pom.xml
+++ b/pom.xml
@@ -497,14 +497,15 @@
     <profile>
       <id>test</id>
       <properties>
-        <jdbc.url.ip>zccxywy.cn:3306/hotel</jdbc.url.ip>
+        <jdbc.url.ip>www.shangzhiqiu.com:3306/hotel</jdbc.url.ip>
         <jdbc.username>root</jdbc.username>
-        <jdbc.password>root</jdbc.password>
+        <jdbc.password>Shangzhiqiu@2019</jdbc.password>
         <system.cfg.imageBaeUrl>http://39.107.224.185:8080/</system.cfg.imageBaeUrl>
         <system.cfg.uploadBaseUrl>/home/zlftFiles/image</system.cfg.uploadBaseUrl>
         <system.cfg.webProjectUrl>http://client.test.urbanfit.cn/</system.cfg.webProjectUrl>
         <system.cfg.wapProjectUrl>http://wap.test.urbanfit.cn/</system.cfg.wapProjectUrl>
       </properties>
     </profile>
+
   </profiles>
 </project>
